# pyex_cc

./: README.rst  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  README.rst  dev-requirements.in  perform-release.sh  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/docs/: conf.py  index.rst  readme.rst  {{cookiecutter.namespace_name}}.{{cookiecutter.package_name}}.rst  {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}.rst  {{cookiecutter.package_name}}.rst
{{cookiecutter.project_name}}/tests/{{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}/: test_hello.py
{{cookiecutter.project_name}}/{{cookiecutter.namespace_name}}/{{cookiecutter.package_name}}/: test_hello.py
{{cookiecutter.project_name}}/{{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}/: hello.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: hello.py  test_hello.py
