[metadata]
name = {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
long_description = file: README.rst
url = https://git-codecommit.us-east-1.amazonaws.com/v1/repos/{{cookiecutter.project_name}}
python_requires = >=3.8
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[extras]
dev =
    docutils<0.16,>=0.10
    Pygments<3.0,>=2.6
    pytest<6.0,>=5.4
    s3pypi<0.11,>=0.10
    tox<4.0,>=3.14
