[metadata]
name = {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
long_description = file: README.rst
url = https://git-codecommit.us-east-1.amazonaws.com/v1/repos/{{cookiecutter.project_name}}
python_requires = >={{cookiecutter.python_version}}
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[extras]
dev =
    codeartifact-release~=0.4.3
    docutils<0.16,>=0.10
    Pygments~=2.6
    pytest~=5.4
    pytest-xdist~=1.32.0
    tox~=3.14
    twine~=3.2.0

[flake8]
max-line-length = 120
