[metadata]
name = {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
long_description = file: README.rst
url = https://github.com/{{cookiecutter.github_org}}/{{cookiecutter.project_name}}
python_requires = >={{cookiecutter.python_version}}
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
